# adt-tools

./: .gitignore  CMakeLists.txt  README.md  adt_tools.h  linked_list.c  linked_list.h  stack.c  stack.h
tests/: CMakeLists.txt  adt_tools_test.c  library.c  library.h  main.c
